Bug 27929 - darwin build ../glxcmds.c:891: error: ‘gc’ undeclared (first use in this function)
Summary: darwin build ../glxcmds.c:891: error: ‘gc’ undeclared (first use in this func...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: GLX (show other bugs)
Version: git
Hardware: x86 (IA32) Mac OS X (All)
: medium blocker
Assignee: Jeremy Huddleston Sequoia
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-01 13:29 UTC by Vinson Lee
Modified: 2010-05-06 18:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2010-05-01 13:29:23 UTC
mesa: 7b640f9f708306b3e8c661771f29bf24bf8687fb (7.8)

The darwin config is currently failing.

$ make
Making sources for darwin
make[3]: Nothing to be done for `default'.
make[3]: Nothing to be done for `default'.
make[3]: Nothing to be done for `default'.
gcc -c -I. -Iinclude -I.. -I../../../include -I../../../include/GL/internal -I../../../src/mesa -I../../../src/mesa/glapi    -ggdb3 -Os -Wall -Wmissing-prototypes -std=c99 -ffast-math -fno-strict-aliasing -I/usr/X11/include -I/usr/X11/include  -fPIC   -D_DARWIN_C_SOURCE -DPTHREADS -D_GNU_SOURCE -DGLX_ALIAS_UNSUPPORTED -DGLX_DIRECT_RENDERING -DGLX_USE_APPLEGL  ../glxcmds.c -o ../glxcmds.o
../glxcmds.c: In function ‘__glXIsDirect’:
../glxcmds.c:891: error: ‘gc’ undeclared (first use in this function)
../glxcmds.c:891: error: (Each undeclared identifier is reported only once
../glxcmds.c:891: error: for each function it appears in.)
make[2]: *** [../glxcmds.o] Error 1
make[1]: *** [subdirs] Error 1
make: *** [default] Error 1
Comment 1 Jeremy Huddleston Sequoia 2010-05-01 14:01:56 UTC
4d63be67f320839d115987211d0d9b4297f6d17d
Comment 2 Vinson Lee 2010-05-01 14:44:10 UTC
mesa: 4d63be67f320839d115987211d0d9b4297f6d17d (7.8)

The originally reported build error is fixed.


However, the darwin build still does not complete due to perhaps a separate unrelated issue.

$ make
Making sources for darwin
make[3]: Nothing to be done for `default'.
make[3]: Nothing to be done for `default'.
make[3]: Nothing to be done for `default'.
make[2]: Nothing to be done for `all'.
(cd shader/slang/library && make) || exit 1 ;
make[3]: Nothing to be done for `default'.
/bin/sh ../../../../bin/mklib -o OSMesa -linker 'gcc' -ldflags '' \
		-major 7 -minor 8 -patch 1 \
		-install ../../../../lib  \
		-id /usr/X11/lib/libOSMesa.7.dylib \
		-L../../../../lib -lGL osmesa.o ../../../../src/mesa/libmesa.a ../../../../src/mesa/libglapi.a ../../../../src/glsl/cl/libglslcl.a ../../../../src/glsl/pp/libglslpp.a
mklib: Making Darwin shared library:  libOSMesa.7.8.dylib
Undefined symbols:
  "_gl_dispatch_stub_361", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_356", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_362", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_357", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_363", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_358", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_364", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_359", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_365", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
  "_gl_dispatch_stub_366", referenced from:
      _static_functions in libglapi.a(glapi_getproc.o)
ld: symbol(s) not found
collect2: ld returned 1 exit status
mklib: Installing libOSMesa.7.8.dylib libOSMesa.7.dylib libOSMesa.dylib in ../../../../lib
mv: rename libOSMesa.7.8.dylib to ../../../../lib/libOSMesa.7.8.dylib: No such file or directory
make[4]: *** [../../../../lib/libOSMesa.dylib] Error 1
make[3]: *** [default] Error 1
make[2]: *** [driver_subdirs] Error 2
make[1]: *** [subdirs] Error 1
make: *** [default] Error 1
Comment 3 Vinson Lee 2010-05-04 22:37:44 UTC
Please fix for master as well.
Comment 4 Jeremy Huddleston Sequoia 2010-05-04 23:33:52 UTC
It's fixed in 7.8, and that fix will get merged into master when appropriate...
Comment 5 Jeremy Huddleston Sequoia 2010-05-04 23:37:15 UTC
As for the OSMesa linking issue...

I can't reproduce that on Leoaprd/ppc+i386+ppc64+x86_64 or Snow Leopard/ppc+i386+x86_64

That is a separate issue, and you should open up a new bug explaining your configuration and how you're building to get that error.
Comment 6 Vinson Lee 2010-05-06 18:57:12 UTC
Closing bug.

'make darwin' works for me on 7.8 and master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.