darwin: Fix build

This is a regression from e42d84eaba228d4d96a46d116c6ca24581e29439

https://bugs.freedesktop.org/show_bug.cgi?id=27929

Signed-off-by: Jeremy Huddleston <jeremyhu@apple.com>
(cherry picked from commit 4d63be67f320839d115987211d0d9b4297f6d17d)